ADD: Se comienza con integración de funcionalidades de pit table antiguo

--- a/src/app/components/pit_table/pit-table.html
+++ b/src/app/components/pit_table/pit-table.html
@@ -1,7 +1,9 @@
 <table ng-class="{ 'table table-bordered table-striped table-responsive': $ctrl.uiFramework === 'bootstrap', 'md-table': $ctrl.uiFramework === 'material' }">
   <thead ng-class="{ 'md-head': $ctrl.uiFramework === 'material' }">
     <tr ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }">
-      <th>Columna 1</th>
+      <th ng-repeat="column in $ctrl.ptColumns" ng-class="">
+        <pthd column="column"></pthd>
+      </th>
     </tr>
   </thead>
   <tbody ng-class="{ 'md-body': $ctrl.uiFramework === 'material' }">
