ADD: Se agrega logica para configuracion de parametros y columnas

--- a/src/app/components/demo.html
+++ b/src/app/components/demo.html
@@ -1,3 +1,3 @@
 <h1>Demo PIT Table</h1>
-<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data"></ptable>
-
+<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams"></ptable>
+<button ng-click="$ctrl.test()">click</button>
