--- a/src/app/components/pit_table/pit-table-header.html
+++ b/src/app/components/pit_table/pit-table-header.html
@@ -1,1 +1,3 @@
-{{ $ctrl.column.name }}
+<span ng-click="$ctrl.columnOrder($ctrl.column)" ng-if="!$ctrl.column.isSelect">
+  {{ $ctrl.column.name }}<i class="pull-right fa" ng-class="$ctrl.thIconClass($ctrl.column.sort)" ng-if="$ctrl.column.sort"></i>
+</span>
