--- a/src/app/components/demo.html
+++ b/src/app/components/demo.html
@@ -1,2 +1,7 @@
 <h1>Demo PIT Table</h1>
-<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams"></ptable>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12">ljkashdkalsdhjkas</div>
+  </div>
+</div>
