FIX: Se elimina prueba innecesaria

--- a/src/app/components/demo.html
+++ b/src/app/components/demo.html
@@ -1,7 +1,2 @@
 <h1>Demo PIT Table</h1>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">ljkashdkalsdhjkas</div>
-  </div>
-</div>
+<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams"></ptable>
