--- a/src/app/components/demo.html
+++ b/src/app/components/demo.html
@@ -1,2 +1,4 @@
 <h1>Demo PIT Table</h1>
-<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams"></ptable>
+<ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams" selected-c="$ctrl.selectedC" un-selected-c="$ctrl.unSelectedC"></ptable>
+<pre>Added: {{ $ctrl.selectedC }}</pre>
+<pre>Deleted: {{ $ctrl.unSelectedC }}</pre>
