ADD: Se agrega boton para limpiar busqueda y se arreglan algunas cosas del toolbar

--- a/src/app/components/pit_table/pit-table.html
+++ b/src/app/components/pit_table/pit-table.html
@@ -1,6 +1,6 @@
-<pttoolbar ng-class="{'row': $ctrl.uiFramework === 'bootstrap'}"></pttoolbar>
-<div dw-loading="data" ng-class="{ 'md-table-container' : $ctrl.uiFramework === 'material', 'container-fluid': $ctrl.uiFramework === 'bootstrap' }">
-  <table ng-class="{ 'table table-bordered table-striped table-responsive': $ctrl.uiFramework === 'bootstrap', 'md-table': $ctrl.uiFramework === 'material', 'dw-loading-container': $ctrl.isLoading, 'md-row-select': $ctrl.uiFramework === 'material' && $ctrl.ptParams.hasSelect }">
+<div dw-loading="data" ng-class="{ 'md-table-container' : $ctrl.uiFramework === 'material', 'container-fluid': $ctrl.uiFramework === 'bootstrap', 'table-container': !$ctrl.uiFramework }" ng-cloak>
+  <pttoolbar></pttoolbar>
+  <table ng-class="{ 'table table-bordered table-striped table-responsive': $ctrl.uiFramework === 'bootstrap', 'md-table': $ctrl.uiFramework === 'material', 'md-row-select': $ctrl.uiFramework === 'material' && $ctrl.ptParams.hasSelect, 'dw-loading-container': $ctrl.isLoading }">
     <thead ng-class="{ 'md-head': $ctrl.uiFramework === 'material' }">
       <tr ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }">
         <th ng-repeat="column in $ctrl.ptColumns" ng-class="{ 'sortable': column.sort && $ctrl.ptData.length && $ctrl.uiFramework === 'bootstrap', 'md-active': column.sort && $ctrl.ptData.length && $ctrl.uiFramework === 'material', 'md-column': $ctrl.uiFramework === 'material'}">
