--- a/src/app/components/pit_table/pit-table-toolbar.html
+++ b/src/app/components/pit_table/pit-table-toolbar.html
@@ -1,26 +1,52 @@
 <div ng-if="$ctrl.ptableCtrl.uiFramework === 'material'">
-  <div layout="row" class="toolbar-pit">
-    <div flex>
-      <md-input-container class="md-block">
-          <md-icon class="md-toolbar-icon-custom">search</md-icon>
-          <label class="tooblar-label-custom">Buscar</label>
-          <input type="text" ng-model="$ctrl.filterModel" ng-change="$ctrl.search($ctrl.filterModel)">
-        </md-input-container>
-    </div>
-  </div>
+  <md-card>
+    <md-toolbar class="md-table-toolbar md-default">
+      <div class="md-toolbar-tools">
+        <md-icon class="material-icons">search</md-icon>
+        <form flex name="filter.form">
+          <input ng-model="$ctrl.filterModel" ng-change="$ctrl.search($ctrl.filterModel)" class="md-block">
+        </form>
+        <button class="md-icon-button md-button md-ink-ripple" type="button" ng-click="$ctrl.removeSearch()" ng-if="$ctrl.filterModel">
+          <md-icon class="material-icons">close</md-icon>
+        </button>
+      </div>
+    </md-toolbar>
+  </md-card>
 </div>
-<div ng-if="$ctrl.ptableCtrl.uiFramework === 'bootstrap' || !$ctrl.ptableCtrl.uiFramework" ng-class="{'height-no-bootstrap': !$ctrl.ptableCtrl.uiFramework}">
-  <div class="dataTables_length">
+
+<div ng-if="$ctrl.ptableCtrl.uiFramework === 'bootstrap'" class="row">
+  <form class="form-inline">
+    <div class="col-xs-12 col-sm-6">
+      <label for="size">Mostrar</label>
+      <div class="form-group">
+        <select class="form-control" name="size" id="size" ng-model="$ctrl.size" ng-change="$ctrl.selectSize($ctrl.size)" ng-options="size for size in $ctrl.pageSizes track by size"></select>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 search-control">
+      <label for="search">Buscar</label>
+      <div class="input-group">
+        <input class="form-control" name="search" id="search" ng-model="$ctrl.filterModel" ng-change="$ctrl.search($ctrl.filterModel)">
+        <span class="input-group-addon input-group-addon-custom">
+            <i class="fa fa-close" ng-click="$ctrl.removeSearch()"></i>
+        </span>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div ng-if="!$ctrl.ptableCtrl.uiFramework" class="height-no-bootstrap">
+  <div class="size-control">
     <label>
-      Mostrar 
-      <select ng-model="$ctrl.size" ng-change="$ctrl.selectSize($ctrl.size)" ng-options="size for size in $ctrl.pageSizes track by size"></select> 
+      Mostrar
+      <select ng-model="$ctrl.size" ng-change="$ctrl.selectSize($ctrl.size)" ng-options="size for size in $ctrl.pageSizes track by size"></select>
       entradas
     </label>
   </div>
-  <div class="dataTables_filter">
+  <div class="search-control">
     <label>
-      Search:
-      <input class="input-search-dataTable" type="text" ng-model="$ctrl.filterModel" ng-change="$ctrl.search($ctrl.filterModel)">
+      Buscar:
+      <input class="input-search" ng-model="$ctrl.filterModel" ng-change="$ctrl.search($ctrl.filterModel)">
+      <button class="close-icon" type="reset" ng-click="$ctrl.removeSearch()" ng-if="$ctrl.filterModel"></button>
     </label>
   </div>
 </div>
