--- a/src/app/components/pit_table/pit-table-pagination.html
+++ b/src/app/components/pit_table/pit-table-pagination.html
@@ -1,11 +1,30 @@
 <div ng-if="$ctrl.ptableCtrl.uiFramework === 'bootstrap'" class="row">
   <div class="col-xs-12 col-md-6">
-    Mostrando registros del {{ ($ctrl.ptableCtrl.utils.pagination.page * $ctrl.ptableCtrl.utils.pagination.size) + 1 }} al {{ $ctrl.ptableCtrl.utils.pagination.totalRows%$ctrl.ptableCtrl.utils.pagination.size === 0 ? ($ctrl.ptableCtrl.utils.pagination.page + 1) * $ctrl.ptableCtrl.utils.pagination.size : $ctrl.ptableCtrl.utils.pagination.totalRows }} de {{ $ctrl.ptableCtrl.utils.pagination.totalRows }}
+    {{ $ctrl.showInfo() }}
   </div>
   <div class="col-xs-12 col-md-6 text-right">
     1, 2, 3, 4...
   </div>
 </div>
-<div >
-
+<div ng-if="$ctrl.ptableCtrl.uiFramework === 'material'" class="md-table-pagination">
+	<div class="item-md-table-paginator">
+		<div class="text-rows-per-page">Página:</div>
+		<md-select class="md-table-select md-select-paginator" ng-model="$ctrl.currentPage" ng-change="$ctrl.goToPage($ctrl.currentPage)">
+			<md-option ng-repeat="page in $ctrl.getSelectPages()" ng-value="page">{{ page }}</md-option>
+		</md-select>
+	</div>
+	<div class="item-md-table-paginator">
+		<ptpsize></ptpsize>
+	</div>
+	<div class="item-md-table-paginator">
+		<span> {{ $ctrl.showInfoMaterial() }} </span>
+	</div>
+	<div class="item-md-table-paginator">
+		<button class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.previous()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == 1">
+          <md-icon class="material-icons"><i class="material-icons">keyboard_arrow_left</i></md-icon>
+        </button>
+        <button style="margin: 0;" class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.next()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == $ctrl.ptableCtrl.utils.pagination.totalPages">
+          <md-icon class="material-icons"><i class="material-icons">keyboard_arrow_right</i></md-icon>
+        </button>
+	</div>
 </div>
