--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -525,3 +525,53 @@ md-checkbox.margin-auto {
 input.cursor-pointer {
   cursor: pointer;
 }
+
+.md-card-pitable {
+  box-sizing: border-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: 8px;box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12)
+}
+
+.text-rows-per-page {
+  display: inline-table; 
+  padding-right: 15px;
+}
+
+md-select.md-select-paginator {
+  display: inline-table;
+  margin: initial;
+}
+
+.md-table-pagination {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding: 0 24px;
+  font-size: 12px;
+  color: rgba(0,0,0,.54);
+  border-top: 1px rgba(0,0,0,.12) solid;
+}
+
+.md-select-value {
+  padding: 0;
+  min-width: 0;
+  min-height: 24px;
+  border-bottom: 0!important;
+}
+
+.item-md-table-paginator {
+  padding: 0 10px 0 10px;
+  margin: 20px 0 26px 0;
+}
+
+.margin-0 {
+  margin: 0;
+}
