--- a/src/app/components/pit_table/pit-table-pagination.html
+++ b/src/app/components/pit_table/pit-table-pagination.html
@@ -10,7 +10,7 @@
 	<div class="item-md-table-paginator">
 		<div class="text-rows-per-page">Página:</div>
 		<md-select class="md-table-select md-select-paginator" ng-model="$ctrl.currentPage" ng-change="$ctrl.goToPage($ctrl.currentPage)">
-			<md-option ng-repeat="page in $ctrl.getSelectPages()" ng-value="page">{{ page }}</md-option>
+			<md-option ng-repeat="page in $ctrl.getSelectPages()" ng-value="page">{{ page + 1 }}</md-option>
 		</md-select>
 	</div>
 	<div class="item-md-table-paginator">
