--- a/src/app/components/pit_table/pit-table.html
+++ b/src/app/components/pit_table/pit-table.html
@@ -9,7 +9,11 @@
           </th>
           <th ng-repeat="column in $ctrl.ptColumns" ng-class="{ 'sortable': column.sort && $ctrl.ptData.length && $ctrl.uiFramework === 'bootstrap', 'md-active': column.sort && $ctrl.ptData.length && $ctrl.uiFramework === 'material', 'md-column': $ctrl.uiFramework === 'material'}">
             <span ng-click="$ctrl.columnOrder(column)">
-              {{ column.name }}<i ng-class="$ctrl.thIconClass(column.sort)" ng-class="{ 'md-sort': $ctrl.uiFramework === 'material', 'pull-right fa': $ctrl.uiFramework === 'bootstrap' }" ng-if="column.sort && $ctrl.ptData.length"></i>
+              {{ column.name }}
+              <fieldset ng-if="column.sort && $ctrl.ptData.length">
+                <i class="pull-right fa " ng-class="$ctrl.thIconClass(column.sort)" ng-if="$ctrl.uiFramework === 'bootstrap'"></i>
+                <md-icon class="md-sort md-sort-icon" ng-class="$ctrl.thIconClass(column.sort)" ng-if="$ctrl.uiFramework === 'material'" ng-bind="$ctrl.thMdIcon(column.sort)"></md-icon>
+                </fieldset>
             </span>
           </th>
         </tr>
