--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,26 +1,3 @@
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v31/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
-
 /* PIT TABLE COMMON */
 ptable table > thead > tr > th.sortable {
   cursor: pointer;
@@ -69,6 +46,9 @@ ptable > div.container-fluid table.table > thead > tr > th {
 }
 
 /* PIT TABLE MATERIAL */
+ptable table > thead > tr > th:not(.md-active) > span {
+  cursor: default;
+}
 ptable > div.md-table-container {
   display: block;
   max-width: 100%;
@@ -92,6 +72,12 @@ ptable > div.md-table-container table.md-table th.md-column {
   font-size: 12px;
   font-weight: bold;
   white-space: nowrap;
+}
+ptable > div.md-table-container table.md-table th.md-column fieldset {
+  display: inline-block;
+}
+ptable > div.md-table-container table.md-table th.md-column fieldset md-icon {
+  font-size: 16px !important;
 }
 ptable > div.md-table-container table.md-table th.md-column .md-icon {
   height: 16px;
@@ -538,7 +524,7 @@ input.cursor-pointer {
 }
 
 .text-rows-per-page {
-  display: inline-table; 
+  display: inline-table;
   padding-right: 15px;
 }
 
