--- a/src/app/components/pit_table/pit-table-pagination.html
+++ b/src/app/components/pit_table/pit-table-pagination.html
@@ -14,16 +14,16 @@
 		</md-select>
 	</div>
 	<div class="item-md-table-paginator">
-		<ptpsize></ptpsize>
+		<ptpsize current-page="$ctrl.currentPage"></ptpsize>
 	</div>
 	<div class="item-md-table-paginator">
 		<span> {{ $ctrl.showInfoMaterial() }} </span>
 	</div>
 	<div class="item-md-table-paginator">
-		<button class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.previous()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == 1">
+		<button class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.previous()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == 0">
           <md-icon class="material-icons"><i class="material-icons">keyboard_arrow_left</i></md-icon>
         </button>
-        <button style="margin: 0;" class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.next()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == $ctrl.ptableCtrl.utils.pagination.totalPages">
+        <button style="margin: 0;" class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.next()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == ($ctrl.ptableCtrl.utils.pagination.totalPages - 1)">
           <md-icon class="material-icons"><i class="material-icons">keyboard_arrow_right</i></md-icon>
         </button>
 	</div>
