FIX: Se deja model utils.pagination.page en 'select' selección de página en matarial

--- a/src/app/components/pit_table/pit-table-pagination.html
+++ b/src/app/components/pit_table/pit-table-pagination.html
@@ -9,12 +9,12 @@
 <div ng-if="$ctrl.ptableCtrl.uiFramework === 'material'" class="md-table-pagination">
 	<div class="item-md-table-paginator">
 		<div class="text-rows-per-page">Página:</div>
-		<md-select class="md-table-select md-select-paginator" ng-model="$ctrl.currentPage" ng-change="$ctrl.goToPage($ctrl.currentPage)">
+		<md-select class="md-table-select md-select-paginator" ng-model="$ctrl.ptableCtrl.utils.pagination.page" ng-change="$ctrl.goToPage()">
 			<md-option ng-repeat="page in $ctrl.getSelectPages()" ng-value="page">{{ page + 1 }}</md-option>
 		</md-select>
 	</div>
 	<div class="item-md-table-paginator">
-		<ptpsize current-page="$ctrl.currentPage"></ptpsize>
+		<ptpsize></ptpsize>
 	</div>
 	<div class="item-md-table-paginator">
 		<span> {{ $ctrl.showInfoMaterial() }} </span>
