--- a/src/app/components/pit_table/pit-table-toolbar.html
+++ b/src/app/components/pit_table/pit-table-toolbar.html
@@ -9,6 +9,9 @@
         <button class="md-icon-button md-button md-ink-ripple" type="button" ng-click="$ctrl.removeSearch()" ng-if="$ctrl.filterModel">
           <md-icon class="material-icons">close</md-icon>
         </button>
+        <button class="md-icon-button md-button md-ink-ripple" type="button" ng-csv="$ctrl.downloadCSV()" csv-label="true" filename="export.csv">
+          <md-icon class="material-icons">file_download</md-icon>
+        </button>
       </div>
     </md-toolbar>
   </md-card>
